compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__guards__clause_guards21.snap
---
source: compiler-core/src/erlang/tests/guards.rs
assertion_line: 177
expression: "\npub fn main(x) {\n  case x {\n    _ if x == [1, 2, 3] -> 1\n    _ -> 0\n  }\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/1]).

-file("/root/project/test/my/mod.rakun", 2).
-spec main(list(integer())) -> integer().
main(X) ->
    case X of
        _ when X =:= [1, 2, 3] ->
            1;

        _ ->
            0
    end.
